<resources>
    <string name="read_permission_failed">Please allow read permission to open model files.</string>
    <string name="open_model_error">Failed to load model.</string>
    <string name="view_vr_not_loaded">Please load a model first.</string>

    <string name="app_name">a3Dyou</string>

    <string name="welcometext">Welcome to a3Dyou Creating 3D Avatar of yourself cannot get simpler than this!!</string>

    <string name="captureimages">Capture Images</string>
    <string name="create">CREATE</string>
    <string name="complete">COMPLETE</string>
    <string name="signin">SIGN IN</string>
    <string name="dmodel">3D Model</string>
    <string name="termsandconditions">Terms and conditions</string>
    <string name="forgetpsw">Forget Password?</string>
    <string name="areyousuretologout">Are you sure you want to logout?</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="capture_image">Capture</string>

    <string name="done">Done</string>
    <string name="recapture_image">Retake Picture</string>
    <string name="capture_criteria">List of Good Input Image Criteria</string>


    <string name="first_point">1. Lighting conditions should be normal.</string>
    <string name="sec_point">2. Other people should be absent in the image.</string>
    <string name="third_point">3. Mirrors and other reflecting surfaces should be absent in the image.</string>
    <string name="fourth_point">4. Background behind a person should differ from him/her in color.</string>
    <string name="fifth_point">5. A person should have a correct posture up to the position of the arms and legs relative to the body.</string>
    <string name="sixth_point">6. Body should be oriented vertically on the image.</string>
    <string name="seven_point">7. Body location on the image should satisfy the certain criteria.</string>
    <string name="title">Information</string>
    <string name="positive">Got it</string>
    <string name="content">Lorem Ipsum</string>
    <string name="agree">Got It</string>


</resources>
