<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/customborder"
            android:layout_margin="@dimen/_10sdp"
            android:layout_gravity="center">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capture_criteria"
                android:textColor="@color/black"
                android:padding="@dimen/_8sdp"
                android:textStyle="bold"
                android:background="@color/yellowtext"
                android:textSize="@dimen/_15sdp"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_point"
                    android:textColor="@color/black"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_10sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sec_point"
                    android:textColor="@color/black"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_10sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_point"
                    android:textColor="@color/black"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_10sdp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_point"
                    android:textColor="@color/black"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_10sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifth_point"
                    android:textColor="@color/black"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_10sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sixth_point"
                    android:textColor="@color/black"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_10sdp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seven_point"
                    android:textColor="@color/black"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_10sdp"/>


                <CheckBox
                    android:id="@+id/checkboxAccept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Accept all the criteria"/>

            </LinearLayout>




            <Button
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="OK"/>


        </LinearLayout>







</RelativeLayout>